unpackaged/main/default/objects/Case/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Logbooks</relationshipLabel>
    <relationshipName>Logbooks</relationshipName>
    <type>Lookup</type>
</CustomField>