unpackaged/main/default/objects/Case/fields/Airline_Flight_Origin_City__c.field-meta.xml
<CustomField>
    <fullName>Airline_Flight_Origin_City__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Airline/ Flight #/ Origin City</label>
    <type>TextArea</type>
</CustomField>