unpackaged/main/default/objects/Case/fields/Appointment_Address__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Address__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Appointment Address</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>