unpackaged/main/default/objects/Case/fields/Arrival_FBO__c.field-meta.xml
<CustomField>
    <fullName>Arrival_FBO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival FBO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>