unpackaged/main/default/objects/Case/fields/Arrival_Location__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrival Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Logbooks (Arrival Location)</relationshipLabel>
    <relationshipName>Logbooks2</relationshipName>
    <type>Lookup</type>
</CustomField>