unpackaged/main/default/objects/Case/fields/Back_Up__c.field-meta.xml
<CustomField>
    <fullName>Back_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back Up</label>
    <type>Checkbox</type>
</CustomField>