unpackaged/main/default/objects/Case/fields/Beneficiary_Address__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Address__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Beneficiary Address</label>
    <type>TextArea</type>
</CustomField>