unpackaged/main/default/objects/Case/fields/Beneficiary_SWIFT_Code__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_SWIFT_Code__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Beneficiary SWIFT Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>