unpackaged/main/default/objects/Case/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <label>Billable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Not Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>