unpackaged/main/default/objects/Case/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Logbooks - Brokered Tickets</relationshipLabel>
    <relationshipName>Logbooks5</relationshipName>
    <type>Lookup</type>
</CustomField>