unpackaged/main/default/objects/Case/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>