unpackaged/main/default/objects/Case/fields/Cancellation_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date_and_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Date and Time</label>
    <type>DateTime</type>
</CustomField>