unpackaged/main/default/objects/Case/fields/Cancellation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>