unpackaged/main/default/objects/Case/fields/Cancellation_Policy_rich__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Policy_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Policy</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>