unpackaged/main/default/objects/Case/fields/Cancellation_Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Policy_Type__c</fullName>
    <label>Cancellation Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insider</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>