unpackaged/main/default/objects/Case/fields/Cancelled_With_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_With_TEXT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancelled With</label>
    <length>255</length>
    <type>Text</type>
</CustomField>