unpackaged/main/default/objects/Case/fields/Case_Time_Logged__c.field-meta.xml
<CustomField>
    <fullName>Case_Time_Logged__c</fullName>
    <label>Case Time Logged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>