unpackaged/main/default/objects/Case/fields/Catering_Details__c.field-meta.xml
<CustomField>
    <fullName>Catering_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Catering Details</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>