unpackaged/main/default/objects/Case/fields/Chargeback_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Credit_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chargeback Credit Card</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Payment_Method__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>only ACTIVE cards are filtered</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Chargeback Logbooks</relationshipLabel>
    <relationshipName>ChargebackLogbooks</relationshipName>
    <type>Lookup</type>
</CustomField>