unpackaged/main/default/objects/Case/fields/Charged__c.field-meta.xml
<CustomField>
    <fullName>Charged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charged</label>
    <type>Checkbox</type>
</CustomField>