unpackaged/main/default/objects/Case/fields/Check_Memo__c.field-meta.xml
<CustomField>
    <fullName>Check_Memo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Check Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>