unpackaged/main/default/objects/Case/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Check Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>