unpackaged/main/default/objects/Case/fields/Client_Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Refund_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Refund Date</label>
    <type>Date</type>
</CustomField>