unpackaged/main/default/objects/Case/fields/Client_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Client_Refunded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Refunded</label>
    <type>Checkbox</type>
</CustomField>