unpackaged/main/default/objects/Case/fields/Client_Requires_Refund__c.field-meta.xml
<CustomField>
    <fullName>Client_Requires_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Requires Refund</label>
    <type>Checkbox</type>
</CustomField>