unpackaged/main/default/objects/Case/fields/Club_Member__c.field-meta.xml
<CustomField>
    <fullName>Club_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Club Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Logbooks (Club Member)</relationshipLabel>
    <relationshipName>Logbooks2</relationshipName>
    <type>Lookup</type>
</CustomField>