unpackaged/main/default/objects/Case/fields/Coastline_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Coastline_Invoice_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coastline Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>