unpackaged/main/default/objects/Case/fields/Comm_Ran__c.field-meta.xml
<CustomField>
    <fullName>Comm_Ran__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comm Ran</label>
    <type>Checkbox</type>
</CustomField>