unpackaged/main/default/objects/Case/fields/Commission_Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount_Outstanding__c</fullName>
    <formula>Insider_Commission__c -  Commission_Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>