unpackaged/main/default/objects/Case/fields/Commission_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount_Received__c</fullName>
    <label>Commission Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>