unpackaged/main/default/objects/Case/fields/Commission_Details__c.field-meta.xml
<CustomField>
    <fullName>Commission_Details__c</fullName>
    <formula>Vendor__r.Commission_Details__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Details</label>
    <type>Text</type>
</CustomField>