unpackaged/main/default/objects/Case/fields/Commission_Entered__c.field-meta.xml
<CustomField>
    <fullName>Commission_Entered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission Entered</label>
    <type>Checkbox</type>
</CustomField>