unpackaged/main/default/objects/Case/fields/Commission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Commission_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commission Notes</label>
    <type>TextArea</type>
</CustomField>