unpackaged/main/default/objects/Case/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <label>Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Commissionable</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Mark Up</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Coastline</fullName>
            </value>
            <value>
                <fullName>Canceled but Commissionable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>