unpackaged/main/default/objects/Case/fields/Commission_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Commission_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Logbooks (Commission Vendor)</relationshipLabel>
    <relationshipName>Logbooks6</relationshipName>
    <type>Lookup</type>
</CustomField>