unpackaged/main/default/objects/Case/fields/Commissionable__c.field-meta.xml
<CustomField>
    <fullName>Commissionable__c</fullName>
    <label>Commissionable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Never Asked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>