unpackaged/main/default/objects/Case/fields/Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmation Date and Time</label>
    <type>DateTime</type>
</CustomField>