unpackaged/main/default/objects/Case/fields/Confirmation_Date_for_Email__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Date_for_Email__c</fullName>
    <formula>Confirmation_Date__c + ($User.Time_Zone_Offset__c/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirmation Date for Email</label>
    <type>DateTime</type>
</CustomField>