unpackaged/main/default/objects/Case/fields/Confirmed_With__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_With__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmed With</label>
    <length>255</length>
    <type>Text</type>
</CustomField>