unpackaged/main/default/objects/Case/fields/Confirmed_With_Contact__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_With_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirmed With Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Confirmed Logbooks</relationshipLabel>
    <relationshipName>ConfirmedLogbooks</relationshipName>
    <type>Lookup</type>
</CustomField>