unpackaged/main/default/objects/Case/fields/Contact_on_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Contact_on_Vendor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact on Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>