unpackaged/main/default/objects/Case/fields/Contact_Person_at_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_at_Delivery__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact at Delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>