unpackaged/main/default/objects/Case/fields/Date_Check_is_Needed__c.field-meta.xml
<CustomField>
    <fullName>Date_Check_is_Needed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Check is Needed</label>
    <type>Date</type>
</CustomField>