unpackaged/main/default/objects/Case/fields/Date_Check_was_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Check_was_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Check was Sent</label>
    <type>Date</type>
</CustomField>