unpackaged/main/default/objects/Case/fields/Date_Commission_Due__c.field-meta.xml
<CustomField>
    <fullName>Date_Commission_Due__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Commission Due</label>
    <type>Date</type>
</CustomField>