unpackaged/main/default/objects/Case/fields/Date_of_Departure2__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Departure2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Departure</label>
    <type>Date</type>
</CustomField>