unpackaged/main/default/objects/Case/fields/Date_of_Refund__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Refund__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Refund</label>
    <type>Date</type>
</CustomField>