unpackaged/main/default/objects/Case/fields/Date_of_Return__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Return__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Return</label>
    <type>Date</type>
</CustomField>