unpackaged/main/default/objects/Case/fields/Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Date_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>