unpackaged/main/default/objects/Case/fields/Date_Time_Need_to_Cancel_By__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Need_to_Cancel_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date/Time Need to Cancel By</label>
    <type>DateTime</type>
</CustomField>