unpackaged/main/default/objects/Case/fields/DateofBooking__c.field-meta.xml
<CustomField>
    <fullName>DateofBooking__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Booking</label>
    <type>Date</type>
</CustomField>