unpackaged/main/default/objects/Case/fields/DateTimeDST__c.field-meta.xml
<CustomField>
    <fullName>DateTimeDST__c</fullName>
    <formula>AND( datevalue( Date_and_Time__c ) &gt;= DATE(YEAR(Datevalue(Date_and_Time__c  )),3,8) + CASE(MOD(DATE(YEAR(Datevalue(Date_and_Time__c  )),3,8) - DATE(1900,1,7),7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 1), datevalue(Date_and_Time__c  ) &lt; DATE(YEAR(Datevalue(Date_and_Time__c  )),11,1) + CASE(MOD(DATE(YEAR(Datevalue(Date_and_Time__c )),11,1) - DATE(1900,1,7),7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateTimeDST</label>
    <type>Checkbox</type>
</CustomField>