unpackaged/main/default/objects/Case/fields/Day_of_Departure__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Departure__c</fullName>
    <formula>CASE(
MOD( Date_of_Departure__c - DATE( 1900, 1, 7 ), 7 ),
0, "Sunday",
1, "Monday",
2, "Tuesday",
3, "Wednesday",
4, "Thursday",
5, "Friday",
"Saturday"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Departure</label>
    <type>Text</type>
</CustomField>