unpackaged/main/default/objects/Case/fields/Delivery_Address_Account__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address_Account__c</fullName>
    <formula>Delivery_Location_Account__r.BillingStreet &amp; ", " &amp; Delivery_Location_Account__r.BillingCity &amp; ", " &amp; Delivery_Location_Account__r.BillingState &amp; ", " &amp; Delivery_Location_Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Address</label>
    <type>Text</type>
</CustomField>