unpackaged/main/default/objects/Case/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>