unpackaged/main/default/objects/Case/fields/Delivery_Instructions_rich__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instructions_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Instructions</label>
    <length>500</length>
    <type>Html</type>
</CustomField>