unpackaged/main/default/objects/Case/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>