unpackaged/main/default/objects/Case/fields/Delivery_Location_Account__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Logbooks (Delivery Location)</relationshipLabel>
    <relationshipName>Logbooks3</relationshipName>
    <type>Lookup</type>
</CustomField>