unpackaged/main/default/objects/Case/fields/Delivery_Location_and_Address_text__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location_and_Address_text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Drop Off Location and Address</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>