unpackaged/main/default/objects/Case/fields/Delivery_Phone__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Phone</label>
    <type>Phone</type>
</CustomField>