unpackaged/main/default/objects/Case/fields/Departure_FBO__c.field-meta.xml
<CustomField>
    <fullName>Departure_FBO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure FBO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>