unpackaged/main/default/objects/Case/fields/Departure_FBO_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Departure_FBO_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure FBO Phone Number</label>
    <type>Phone</type>
</CustomField>