unpackaged/main/default/objects/Case/fields/Departure_FBO_Phone_Number_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Departure_FBO_Phone_Number_Formatted__c</fullName>
    <formula>IF(LEN(Departure_FBO_Phone_Number__c) = 10,
"(" &amp; LEFT(Departure_FBO_Phone_Number__c, 3) &amp; ") " &amp; RIGHT(LEFT(Departure_FBO_Phone_Number__c, 6), 3) &amp; "-" &amp; RIGHT(Departure_FBO_Phone_Number__c, 4), Departure_FBO_Phone_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure FBO Phone Number Formatted</label>
    <type>Text</type>
</CustomField>