unpackaged/main/default/objects/Case/fields/Departure_Location__c.field-meta.xml
<CustomField>
    <fullName>Departure_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Logbooks (Departure Location)</relationshipLabel>
    <relationshipName>Logbooks1</relationshipName>
    <type>Lookup</type>
</CustomField>