unpackaged/main/default/objects/Case/fields/Departure_Location_and_Address__c.field-meta.xml
<CustomField>
    <fullName>Departure_Location_and_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Location and Address</label>
    <type>TextArea</type>
</CustomField>