unpackaged/main/default/objects/Case/fields/Departure_Phone__c.field-meta.xml
<CustomField>
    <fullName>Departure_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Phone</label>
    <type>Phone</type>
</CustomField>