unpackaged/main/default/objects/Case/fields/Departure_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Departure_Terminal__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Departure Terminal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>