unpackaged/main/default/objects/Case/fields/Deposit_Due_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Due_Amounts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deposit Due/Amounts</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>